# Jeu-de-la-vie

./: README
src/: CMakeLists.txt  main.cpp
src/fichier/: case.cpp  case.hpp  plateau.cpp  plateau.hpp
